--- a/.env.example.ys
+++ b/.env.example.ys
@@ -9,9 +9,9 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=reza2421
-DB_DATABASE=PwCTest
+DB_DATABASE=Adonis
 SESSION_DRIVER=cookie
 PROJECT_ID=5a866317cac337000f571c2f
-JWT_SECRET=5a866317cac337000f571c2f.macbooklocal
+JWT_SECRET=superfungitsclass
 
 NOTES=THISISSAMPLE
